fix typo in config

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 
 - [ ] add post on potential for hydropower in UK (Ch4 of without hot air)
+- [ ] fix the fact that /tags/ruby doesn't work in prod
