--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-
+- [ ] get domain name
+- [ ] get HTTPS
 - [ ] add post on potential for hydropower in UK (Ch4 of without hot air)
 - [ ] fix the fact that /tags/ruby doesn't work in prod
