--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-- [ ] get domain name
-- [ ] get HTTPS
 - [ ] add post on potential for hydropower in UK (Ch4 of without hot air)
-- [ ] fix the fact that /tags/ruby doesn't work in prod
+- [ ] add some posts on energy science
+- [x] fix the fact that /tags/ruby doesn't work in prod
+- [x] get domain name (Sun Aug 24 10:26:40 PM BST 2025 - vjbe.net)
+- [x] get HTTPS (Sun Aug 24 10:26:50 PM BST 2025 - with let's encrypt)
