--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 - [ ] add post on potential for hydropower in UK (Ch4 of without hot air)
 - [ ] add some posts on energy science
+- [ ] blog post: creating a ruby shell script (figure out why I can't get the interpreter to work)
 - [x] fix the fact that /tags/ruby doesn't work in prod
 - [x] get domain name (Sun Aug 24 10:26:40 PM BST 2025 - vjbe.net)
 - [x] get HTTPS (Sun Aug 24 10:26:50 PM BST 2025 - with let's encrypt)
