--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@
 - [x] fix the fact that /tags/ruby doesn't work in prod
 - [x] get domain name (Sun Aug 24 10:26:40 PM BST 2025 - vjbe.net)
 - [x] get HTTPS (Sun Aug 24 10:26:50 PM BST 2025 - with let's encrypt)
+- [ ] create terminology sheet for thermodynamics
