--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- [ ] change 'create new post' to be a bash script instead of a ruby script
 - [ ] add post on potential for hydropower in UK (Ch4 of without hot air)
 - [ ] add some posts on energy science
 - [ ] blog post: creating a ruby shell script (figure out why I can't get the interpreter to work)
